Minor UI updates

--- a/Lounge/MainWindow.xaml
+++ b/Lounge/MainWindow.xaml
@@ -49,12 +49,11 @@
                 <ColumnDefinition Width="50" />
                 <ColumnDefinition Width="50" />
                 <ColumnDefinition Width="220" />
-                <ColumnDefinition Width="140" />
-                <ColumnDefinition Width="140" />
                 <ColumnDefinition Width="160" />
                 <ColumnDefinition Width="160" />
-                <ColumnDefinition Width="130" />
-                <ColumnDefinition Width="130" />
+                <ColumnDefinition Width="160" />
+                <ColumnDefinition Width="160" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
             <Button 
@@ -155,7 +154,7 @@
                 </Grid.RowDefinitions>
 
                 <Slider x:Name="AudioVolume" 
-                        ToolTip="Audio Volume"
+                        ToolTip="Audio Volume: 50%"
                         Grid.Row="0" 
                         HorizontalAlignment="Stretch" 
                         VerticalAlignment="Stretch" 
@@ -170,21 +169,14 @@
                             />
             </Grid>
 
-            <ListBox x:Name="LEDPatterns" 
-                     ToolTip="LED Patterns"
-                     Grid.Column="10"
-                     Margin="5, 0, 5, 0"
-                     VerticalAlignment="Stretch" 
-                     HorizontalAlignment="Stretch" />
-
             <ListBox x:Name="visualizations"
                      ToolTip="Audio Visualizations"
-                     Grid.Column="11" 
+                     Grid.Column="10" 
                      Margin="5, 0, 5, 0"
                      HorizontalAlignment="Stretch" 
                      VerticalAlignment="Stretch" />
 
-            <Grid Grid.Column="12"
+            <Grid Grid.Column="11"
                   Margin="10, 0, 10, 0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -231,7 +223,7 @@
 
             </Grid>
 
-            <Grid Grid.Column="13">
+            <Grid Grid.Column="12">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
@@ -279,7 +271,7 @@
                          />
             </Grid>
             
-            <Grid Grid.Column="14"
+            <Grid Grid.Column="13"
                   Margin="10, 0, 10, 0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -292,7 +284,7 @@
                 <CheckBox x:Name="loopAudio" Grid.Row="2" Content="Loop Audio" IsChecked="False" />
             </Grid>
             
-            <Grid Grid.Column="15"
+            <Grid Grid.Column="14"
                   Margin="10, 0, 10, 0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
